@@ -27,6 +27,7 @@ gnulib_modules="
   lstat
   mkdir
   mkfifo
+  rmdir
   stat
   strftime
   times
