@@ -54,6 +54,8 @@ extern "C" OCTAVE_API int octave_gethostname (char *, int);
 extern "C" OCTAVE_API void octave_qsort (void *base, size_t n, size_t size,
 			      int (*cmp) (const void *, const void *));
 
+extern "C" OCTAVE_API int octave_rmdir (const char *name);
+
 extern "C" OCTAVE_API char *oct_strptime (const char *buf, const char *format,
 			       struct tm *tm);
 
